@@ -98,6 +98,7 @@ Version 1.4.4 - CVS
   - Changing your JavaScript preference required a re-login to work.
     Fixes #983614.
   - Miscellaneous documentation updates / improvements.
+  - Compose-in-new didn't always work with JavaScript disabled. (#801999)
 
 Version 1.4.3a - 2 June 2004
 ----------------------------
